Styled edit-song modal

--- a/app/assets/stylesheets/songs.css
+++ b/app/assets/stylesheets/songs.css
@@ -1,4 +1,12 @@
 /* ==========================================================================
+ 	songs/index.html
+   ========================================================================== */
+
+#add-to-playlist-form {
+	border-right:1px solid black;
+}
+
+/* ==========================================================================
  	songs/new.html
    ========================================================================== */
 
