--- a/app/views/songs/forms/_edit_song_form.html.erb
+++ b/app/views/songs/forms/_edit_song_form.html.erb
@@ -1,39 +1,44 @@
-<%= form_tag({:action => 'update', :artist_to_be_updated => @artist_to_be_updated, :song_id => @song, :artist_id => @artist}) do %>
+<div class="container" style="max-width:100%;">
+  <!-- Edit title, artist form !-->
+  <%= form_tag({:action => 'update', :artist_to_be_updated => @artist_to_be_updated, :song_id => @song, :artist_id => @artist}, :class => 'col-sm-6') do %>
 
-<%= error_messages_for(@song) %>
-  
-  <div class="form-group">
-    <%= label_tag :title, 'Title: ' %>
-    <%= text_field(:song, :title) %>
-  </div>
-  <div class="form-group">
-    <%= label_tag :artist, 'Artist: ' %>
-    <%= text_field(:artist, :artist) %>
-  </div>
-  <%= button_tag(type: 'submit', class: "btn btn-primary") do %>
-    <span class="glyphicon glyphicon-pencil"></span> Edit Song
+  <%= error_messages_for(@song) %>
+    
+    <div class="form-group">
+      <%= label_tag :title, 'Title: ' %>
+      <%= text_field(:song, :title) %>
+    </div>
+    <div class="form-group">
+      <%= label_tag :artist, 'Artist: ' %>
+      <%= text_field(:artist, :artist) %>
+    </div>
+    <%= button_tag(type: 'submit', class: "btn-sm btn-primary") do %>
+      <span class="glyphicon glyphicon-pencil"></span> Edit Song
+    <% end %>
+
   <% end %>
 
-<% end %>
+  <!-- Add track to playlist form!-->
+  <%= form_for(:playlist, :url => {:controller => 'playlists', :action => 'create_songs', :song_id => @song}, :html => {:class => 'col-xs-6 col-sm-3', :id => 'add-to-playlist-form'}) do |f| %>
+  <% @playlists = Playlist.all %>
 
-<%= form_tag({:action => 'delete', :song_id => @song, :artist_id => @artist}) do %><br>
+  <%= error_messages_for(@playlist) %>
+    
+    <div class="form-group">
+      <%= f.select(:id, @playlists.map {|s| [s.playlist, s.id] }) %>
+    </div>
+    <%= button_tag(type: 'submit', class: "btn-sm btn-primary") do %>
+       Add to Playlist
+    <% end %>
 
-  <%= button_tag(type: 'submit', class: "btn btn-danger") do %>
-    <span class="glyphicon glyphicon-remove"></span> Delete Song
   <% end %>
 
-<% end %>
+  <!-- Delete track form !-->
+  <%= form_tag({:action => 'delete', :song_id => @song, :artist_id => @artist}, :class => 'col-xs-6 col-sm-3') do %><br>
 
-<%= form_for(:playlist, :url => {:controller => 'playlists', :action => 'create_songs', :song_id => @song}) do |f| %>
-<% @playlists = Playlist.all %>
+    <%= button_tag(type: 'submit', class: "btn-sm btn-danger") do %>
+      <span class="glyphicon glyphicon-remove"></span> Delete
+    <% end %>
 
-<%= error_messages_for(@playlist) %>
-  
-  <div class="form-group">
-    <%= f.select(:id, @playlists.map {|s| [s.playlist, s.id] }) %>
-  </div>
-  <%= button_tag(type: 'submit', class: "btn btn-primary") do %>
-     Add to Playlist
   <% end %>
-
-<% end %>
+</div>
