Styled playlist title in header

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -117,6 +117,10 @@ header {
 	display:table;
 }
 
+#playlist-title {
+	text-decoration:underline;
+}
+
 nav ul {
 	list-style:none;
 	border-radius:5px;
